Add validation results

--- a/notebooks/python/test-parsing-diff.ipynb
+++ b/notebooks/python/test-parsing-diff.ipynb
@@ -9,8 +9,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-12-31T05:44:58.233285503Z",
-     "start_time": "2025-12-31T05:44:58.172441990Z"
+     "end_time": "2026-01-03T10:06:16.904277494Z",
+     "start_time": "2026-01-03T10:06:16.884674611Z"
     }
    },
    "cell_type": "code",
@@ -33,17 +33,8 @@
     "additions = []"
    ],
    "id": "becde4d357d08b59",
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/home/bazzite/IdeaProjects/notebooks/local-llm-for-android/.venv/lib/python3.14/site-packages/tree_sitter/__init__.py:36: FutureWarning: Language(path, name) is deprecated. Use Language(ptr, name) instead.\n",
-      "  warn(\"{} is deprecated. Use {} instead.\".format(old, new), FutureWarning)\n"
-     ]
-    }
-   ],
-   "execution_count": 1
+   "outputs": [],
+   "execution_count": 4
   },
   {
    "metadata": {},
@@ -57,8 +48,8 @@
    "metadata": {
     "collapsed": true,
     "ExecuteTime": {
-     "end_time": "2025-12-31T06:08:23.881025829Z",
-     "start_time": "2025-12-31T06:08:23.825647154Z"
+     "end_time": "2026-01-03T10:06:16.959705479Z",
+     "start_time": "2026-01-03T10:06:16.906307992Z"
     }
    },
    "source": [
@@ -127,7 +118,7 @@
       "colors: TopAppBarColors = TopAppBarDefaults.topAppBarColors(),\n",
       "colors = TopAppBarDefaults.topAppBarColors(\n",
       "has error: False\n",
-      "s-exp: (source (block (command (argument) (filename)) (index (commit) (commit) (mode)) (old_file (filename)) (new_file (filename)) (hunks (hunk location: (location (linerange) (linerange)) changes: (changes (context) (context) (context) (deletion) (addition) (context) (context) (context))))) (block (command (argument) (filename)) (index (commit) (commit) (mode)) (old_file (filename)) (new_file (filename)) (hunks (hunk location: (location (linerange) (linerange)) changes: (changes (context) (context) (context) (deletion) (addition) (context) (context) (context))))))\n",
+      "s-exp: (source (old_file (filename)) (new_file (filename)) (location (linerange) (linerange)) (context) (context) (context) (deletion) (addition) (context) (context) (context) (old_file (filename)) (new_file (filename)) (location (linerange) (linerange)) (context) (context) (context) (deletion) (addition) (context) (context) (context))\n",
       "contains_all_deletions: True\n",
       "contains_all_additions: True\n"
      ]
@@ -144,8 +135,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-12-31T06:08:38.512075923Z",
-     "start_time": "2025-12-31T06:08:38.456159492Z"
+     "end_time": "2026-01-03T10:06:17.020844636Z",
+     "start_time": "2026-01-03T10:06:16.961100408Z"
     }
    },
    "cell_type": "code",
@@ -207,14 +198,16 @@
      "output_type": "stream",
      "text": [
       "Deletions:\n",
+      "import org.jetbrains.kotlin.gradle.dsl.KotlinJvmProjectExtension\n",
       "import org.jetbrains.kotlin.gradle.dsl.KotlinTopLevelExtension\n",
       "private inline fun <reified T : KotlinTopLevelExtension> Project.configureKotlin() = configure<T> {\n",
       "\n",
       "Additions:\n",
       "import org.jetbrains.kotlin.gradle.dsl.KotlinBaseExtension\n",
+      "import org.jetbrains.kotlin.gradle.dsl.KotlinJvmProjectExtension\n",
       "private inline fun <reified T : KotlinBaseExtension> Project.configureKotlin() = configure<T> {\n",
-      "has error: True\n",
-      "s-exp: (source (block (command (argument) (filename))) (ERROR (commit) (UNEXPECTED 'g')) (old_file (filename)) (new_file (filename)) (location (linerange) (linerange)) (context) (context) (context) (addition) (context) (deletion) (context) (location (linerange) (linerange)) (context) (context) (context) (deletion) (addition) (context) (context) (context))\n",
+      "has error: False\n",
+      "s-exp: (source (old_file (filename)) (new_file (filename)) (location (linerange) (linerange)) (context) (context) (context) (deletion) (deletion) (addition) (addition) (context) (location (linerange) (linerange)) (context) (context) (context) (deletion) (addition) (context) (context) (context))\n",
       "contains_all_deletions: True\n",
       "contains_all_additions: True\n"
      ]
