--- a/notebooks/python/test-parsing-kt.ipynb
+++ b/notebooks/python/test-parsing-kt.ipynb
@@ -10,25 +10,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
    "id": "26e1b200132bd07e",
    "metadata": {
+    "collapsed": true,
     "ExecuteTime": {
-     "end_time": "2025-12-31T05:34:39.118893050Z",
-     "start_time": "2025-12-31T05:34:39.088745965Z"
-    },
-    "collapsed": true
-   },
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/home/bazzite/IdeaProjects/notebooks/local-llm-for-android/.venv/lib/python3.14/site-packages/tree_sitter/__init__.py:36: FutureWarning: Language(path, name) is deprecated. Use Language(ptr, name) instead.\n",
-      "  warn(\"{} is deprecated. Use {} instead.\".format(old, new), FutureWarning)\n"
-     ]
+     "end_time": "2026-01-03T10:06:13.984969651Z",
+     "start_time": "2026-01-03T10:06:13.969961712Z"
     }
-   ],
+   },
    "source": [
     "from tree_sitter import Language, Parser\n",
     "from pathlib import Path\n",
@@ -38,7 +27,9 @@
     "\n",
     "parser = Parser()\n",
     "parser.set_language(KOTLIN_LANGUAGE)"
-   ]
+   ],
+   "outputs": [],
+   "execution_count": 5
   },
   {
    "cell_type": "markdown",
@@ -50,52 +41,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
    "id": "5f3947712a616c81",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-12-31T05:34:43.944474543Z",
-     "start_time": "2025-12-31T05:34:43.912270820Z"
+     "end_time": "2026-01-03T10:06:14.059029543Z",
+     "start_time": "2026-01-03T10:06:13.985898458Z"
     }
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Functions and their annotations:\n",
-      "\n",
-      "Function: InterestsCardPreview\n",
-      "  Annotations (on function):\n",
-      "    @Preview\n",
-      "    @Composable\n",
-      "\n",
-      "Function: InterestsCardLongNamePreview\n",
-      "  Annotations (on function):\n",
-      "    @Preview\n",
-      "    @Composable\n",
-      "\n",
-      "Function: InterestsCardLongDescriptionPreview\n",
-      "  Annotations (on function):\n",
-      "    @Preview\n",
-      "    @Composable\n",
-      "\n",
-      "Function: InterestsCardWithEmptyDescriptionPreview\n",
-      "  Annotations (on function):\n",
-      "    @Preview\n",
-      "    @Composable\n",
-      "\n",
-      "Function: InterestsCardSelectedPreview\n",
-      "  Annotations (on function):\n",
-      "    @Composable\n",
-      "    @Preview\n",
-      "\n",
-      "Valid Kotlin: True\n",
-      "Total functions found: 5\n",
-      "Total functions with @Preview and @Composable: 5\n"
-     ]
-    }
-   ],
    "source": [
     "kt_1 = Path(\"../../resources/golden-reference/original/test1-preview.kt\").read_bytes()\n",
     "tree = parser.parse(kt_1)\n",
@@ -172,7 +124,44 @@
     "print(f\"Valid Kotlin: {is_valid_kotlin}\")\n",
     "print(f\"Total functions found: {len(all_functions)}\")\n",
     "print(f\"Total functions with @Preview and @Composable: {total_preview_composable_functions}\")"
-   ]
+   ],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Function: InterestsCardPreview\n",
+      "  Annotations (on function):\n",
+      "    @Preview\n",
+      "    @Composable\n",
+      "\n",
+      "Function: InterestsCardLongNamePreview\n",
+      "  Annotations (on function):\n",
+      "    @Preview\n",
+      "    @Composable\n",
+      "\n",
+      "Function: InterestsCardLongDescriptionPreview\n",
+      "  Annotations (on function):\n",
+      "    @Preview\n",
+      "    @Composable\n",
+      "\n",
+      "Function: InterestsCardWithEmptyDescriptionPreview\n",
+      "  Annotations (on function):\n",
+      "    @Preview\n",
+      "    @Composable\n",
+      "\n",
+      "Function: InterestsCardSelectedPreview\n",
+      "  Annotations (on function):\n",
+      "    @Composable\n",
+      "    @Preview\n",
+      "\n",
+      "Valid Kotlin: True\n",
+      "Total functions found: 5\n",
+      "Total functions with @Preview and @Composable: 5\n"
+     ]
+    }
+   ],
+   "execution_count": 6
   },
   {
    "cell_type": "markdown",
@@ -184,28 +173,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
    "id": "1a0bd206e2fb9921",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-12-31T05:34:47.314301146Z",
-     "start_time": "2025-12-31T05:34:47.277708132Z"
+     "end_time": "2026-01-03T10:06:14.131924927Z",
+     "start_time": "2026-01-03T10:06:14.060821905Z"
     }
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "--- Analysis ---\n",
-      "Valid Kotlin: True\n",
-      "Has All Required Imports: True\n",
-      "Has GetFollowableTopicsUseCase Constructor: True\n",
-      "Functions with @Test annotation: 2\n",
-      "Has Exactly 2 Test Functions: True\n"
-     ]
-    }
-   ],
    "source": [
     "kt_2 = Path(\"../../resources/golden-reference/original/test2-unit-test.kt\").read_bytes()\n",
     "tree = parser.parse(kt_2)\n",
@@ -296,7 +270,22 @@
     "print(f\"Has GetFollowableTopicsUseCase Constructor: {has_use_case_constructor}\")\n",
     "print(f\"Functions with @Test annotation: {test_functions_count}\")\n",
     "print(f\"Has Exactly 2 Test Functions: {has_exactly_three_test_functions}\")"
-   ]
+   ],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "--- Analysis ---\n",
+      "Valid Kotlin: True\n",
+      "Has All Required Imports: True\n",
+      "Has GetFollowableTopicsUseCase Constructor: True\n",
+      "Functions with @Test annotation: 2\n",
+      "Has Exactly 2 Test Functions: True\n"
+     ]
+    }
+   ],
+   "execution_count": 7
   },
   {
    "cell_type": "markdown",
@@ -308,31 +297,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
    "id": "82603b1ae0afe301",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-12-31T06:27:03.581789629Z",
-     "start_time": "2025-12-31T06:27:03.510374929Z"
+     "end_time": "2026-01-03T10:06:14.191412245Z",
+     "start_time": "2026-01-03T10:06:14.134224869Z"
     }
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "--- Analysis ---\n",
-      "Imports TopicEntity: True\n",
-      "Inherits from DatabaseTest: True\n",
-      "Functions with @Test: 7\n",
-      "\n",
-      "--- Details ---\n",
-      "Imports: ['com.google.samples.apps.nowinandroid.core.database.model.TopicEntity', 'kotlinx.coroutines.flow.first', 'kotlinx.coroutines.test.runTest', 'org.junit.Test', 'kotlin.test.assertEquals']\n",
-      "Classes: [{'name': 'TopicDaoTest', 'parents': ['DatabaseTest']}]\n",
-      "Test functions: ['getTopics', 'getTopic', 'getTopics_oneOff', 'getTopics_byId', 'insertTopic_newEntryIsIgnoredIfAlreadyExists', 'upsertTopic_existingEntryIsUpdated', 'deleteTopics_byId_existingEntriesAreDeleted']\n"
-     ]
-    }
-   ],
    "source": [
     "kt_3 = Path(\"../../resources/golden-reference/original/test3-instrumentation-test.kt\").read_bytes()\n",
     "tree = parser.parse(kt_3)\n",
@@ -423,7 +394,25 @@
     "print(f\"Imports: {results['imports']}\")\n",
     "print(f\"Classes: {results['classes']}\")\n",
     "print(f\"Test functions: {test_functions}\")"
-   ]
+   ],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "--- Analysis ---\n",
+      "Imports TopicEntity: True\n",
+      "Inherits from DatabaseTest: True\n",
+      "Functions with @Test: 7\n",
+      "\n",
+      "--- Details ---\n",
+      "Imports: ['com.google.samples.apps.nowinandroid.core.database.model.TopicEntity', 'kotlinx.coroutines.flow.first', 'kotlinx.coroutines.test.runTest', 'org.junit.Test', 'kotlin.test.assertEquals']\n",
+      "Classes: [{'name': 'TopicDaoTest', 'parents': ['DatabaseTest']}]\n",
+      "Test functions: ['getTopics', 'getTopic', 'getTopics_oneOff', 'getTopics_byId', 'insertTopic_newEntryIsIgnoredIfAlreadyExists', 'upsertTopic_existingEntryIsUpdated', 'deleteTopics_byId_existingEntriesAreDeleted']\n"
+     ]
+    }
+   ],
+   "execution_count": 8
   }
  ],
  "metadata": {
