--- a/notebooks/kotlin/test-setup.ipynb
+++ b/notebooks/kotlin/test-setup.ipynb
@@ -26,8 +26,8 @@
      ]
     },
     "ExecuteTime": {
-     "end_time": "2026-01-03T07:51:08.957227155Z",
-     "start_time": "2026-01-03T07:51:08.876457819Z"
+     "end_time": "2026-01-03T10:03:47.517369855Z",
+     "start_time": "2026-01-03T10:03:47.196795083Z"
     }
    },
    "source": [
@@ -36,7 +36,7 @@
     "@file:DependsOn(\"dev.langchain4j:langchain4j-http-client-jdk:1.6.0\")"
    ],
    "outputs": [],
-   "execution_count": 44
+   "execution_count": 1
   },
   {
    "cell_type": "markdown",
@@ -50,6 +50,7 @@
    "metadata": {
     "executionRelatedData": {
      "compiledClasses": [
+      "Line_44_jupyter",
       "Line_10_jupyter",
       "Line_5_jupyter",
       "Line_30_jupyter",
@@ -59,13 +60,12 @@
       "Line_4_jupyter",
       "Line_12_jupyter",
       "Line_26_jupyter",
-      "Line_40_jupyter",
-      "Line_44_jupyter"
+      "Line_40_jupyter"
      ]
     },
     "ExecuteTime": {
-     "end_time": "2026-01-03T07:51:26.399339017Z",
-     "start_time": "2026-01-03T07:51:08.957868574Z"
+     "end_time": "2026-01-03T10:03:58.640406389Z",
+     "start_time": "2026-01-03T10:03:47.518312548Z"
     }
    },
    "source": [
@@ -105,7 +105,7 @@
      ]
     }
    ],
-   "execution_count": 45
+   "execution_count": 2
   },
   {
    "metadata": {},
@@ -136,8 +136,8 @@
      ]
     },
     "ExecuteTime": {
-     "end_time": "2026-01-03T07:51:27.784137925Z",
-     "start_time": "2026-01-03T07:51:26.409191943Z"
+     "end_time": "2026-01-03T10:03:58.822572279Z",
+     "start_time": "2026-01-03T10:03:58.641146373Z"
     }
    },
    "cell_type": "code",
@@ -193,28 +193,45 @@
    ],
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "```kotlin\n",
-      "println(\"Hello, world!\")\n",
-      "```\n",
-      "\n",
-      "\n",
-      "\n",
-      "****************************************************************************************************\n",
-      "\n",
-      "\n",
-      "Selamat pagi!\n",
-      "\n",
-      "\n",
-      "****************************************************************************************************\n",
-      "\n",
-      "\n"
+     "ename": "org.jetbrains.kotlinx.jupyter.exceptions.ReplCompilerException",
+     "evalue": "at Cell In[3], line 20, column 27: Unresolved reference: ChatModel\nat Cell In[3], line 33, column 31: Unresolved reference: ChatModel",
+     "output_type": "error",
+     "traceback": [
+      "org.jetbrains.kotlinx.jupyter.exceptions.ReplCompilerException: at Cell In[3], line 20, column 27: Unresolved reference: ChatModel",
+      "at Cell In[3], line 33, column 31: Unresolved reference: ChatModel",
+      "\tat org.jetbrains.kotlinx.jupyter.repl.impl.JupyterCompilerImpl.compileSync(JupyterCompilerImpl.kt:151)",
+      "\tat org.jetbrains.kotlinx.jupyter.repl.impl.InternalEvaluatorImpl.eval(InternalEvaluatorImpl.kt:126)",
+      "\tat org.jetbrains.kotlinx.jupyter.repl.impl.CellExecutorImpl.execute_W38Nk0s$lambda$0$1(CellExecutorImpl.kt:95)",
+      "\tat org.jetbrains.kotlinx.jupyter.repl.impl.ReplForJupyterImpl.withHost(ReplForJupyterImpl.kt:730)",
+      "\tat org.jetbrains.kotlinx.jupyter.repl.impl.CellExecutorImpl.execute-W38Nk0s(CellExecutorImpl.kt:93)",
+      "\tat org.jetbrains.kotlinx.jupyter.repl.execution.CellExecutor.execute-W38Nk0s$default(CellExecutor.kt:14)",
+      "\tat org.jetbrains.kotlinx.jupyter.repl.impl.ReplForJupyterImpl.evaluateUserCode-wNURfNM(ReplForJupyterImpl.kt:591)",
+      "\tat org.jetbrains.kotlinx.jupyter.repl.impl.ReplForJupyterImpl.evalExImpl(ReplForJupyterImpl.kt:472)",
+      "\tat org.jetbrains.kotlinx.jupyter.repl.impl.ReplForJupyterImpl.evalEx$lambda$0(ReplForJupyterImpl.kt:466)",
+      "\tat org.jetbrains.kotlinx.jupyter.repl.impl.ReplForJupyterImpl.withEvalContext(ReplForJupyterImpl.kt:448)",
+      "\tat org.jetbrains.kotlinx.jupyter.repl.impl.ReplForJupyterImpl.evalEx(ReplForJupyterImpl.kt:465)",
+      "\tat org.jetbrains.kotlinx.jupyter.messaging.IdeCompatibleMessageRequestProcessor.processExecuteRequest$lambda$0$0$0(IdeCompatibleMessageRequestProcessor.kt:161)",
+      "\tat org.jetbrains.kotlinx.jupyter.streams.BlockingSubstitutionEngine.withDataSubstitution(SubstitutionEngine.kt:124)",
+      "\tat org.jetbrains.kotlinx.jupyter.streams.StreamSubstitutionManager.withSubstitutedStreams(StreamSubstitutionManager.kt:118)",
+      "\tat org.jetbrains.kotlinx.jupyter.messaging.IdeCompatibleMessageRequestProcessor.withForkedIn(IdeCompatibleMessageRequestProcessor.kt:351)",
+      "\tat org.jetbrains.kotlinx.jupyter.messaging.IdeCompatibleMessageRequestProcessor.evalWithIO$lambda$0$0(IdeCompatibleMessageRequestProcessor.kt:364)",
+      "\tat org.jetbrains.kotlinx.jupyter.streams.BlockingSubstitutionEngine.withDataSubstitution(SubstitutionEngine.kt:124)",
+      "\tat org.jetbrains.kotlinx.jupyter.streams.StreamSubstitutionManager.withSubstitutedStreams(StreamSubstitutionManager.kt:118)",
+      "\tat org.jetbrains.kotlinx.jupyter.messaging.IdeCompatibleMessageRequestProcessor.withForkedErr(IdeCompatibleMessageRequestProcessor.kt:341)",
+      "\tat org.jetbrains.kotlinx.jupyter.messaging.IdeCompatibleMessageRequestProcessor.evalWithIO$lambda$0(IdeCompatibleMessageRequestProcessor.kt:363)",
+      "\tat org.jetbrains.kotlinx.jupyter.streams.BlockingSubstitutionEngine.withDataSubstitution(SubstitutionEngine.kt:124)",
+      "\tat org.jetbrains.kotlinx.jupyter.streams.StreamSubstitutionManager.withSubstitutedStreams(StreamSubstitutionManager.kt:118)",
+      "\tat org.jetbrains.kotlinx.jupyter.messaging.IdeCompatibleMessageRequestProcessor.withForkedOut(IdeCompatibleMessageRequestProcessor.kt:334)",
+      "\tat org.jetbrains.kotlinx.jupyter.messaging.IdeCompatibleMessageRequestProcessor.evalWithIO(IdeCompatibleMessageRequestProcessor.kt:362)",
+      "\tat org.jetbrains.kotlinx.jupyter.messaging.IdeCompatibleMessageRequestProcessor.processExecuteRequest$lambda$0$0(IdeCompatibleMessageRequestProcessor.kt:160)",
+      "\tat org.jetbrains.kotlinx.jupyter.execution.JupyterExecutorImpl$Task.execute(JupyterExecutorImpl.kt:41)",
+      "\tat org.jetbrains.kotlinx.jupyter.execution.JupyterExecutorImpl.executorThread$lambda$0(JupyterExecutorImpl.kt:81)",
+      "\tat kotlin.concurrent.ThreadsKt$thread$thread$1.run(Thread.kt:30)",
+      ""
      ]
     }
    ],
-   "execution_count": 46
+   "execution_count": 3
   }
  ],
  "metadata": {
