--- a/notebooks/kotlin/code-generation.ipynb
+++ b/notebooks/kotlin/code-generation.ipynb
@@ -3,11 +3,18 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": "1. Adding dependencies:"
+   "source": [
+    "1. Adding dependencies:"
+   ]
   },
   {
    "cell_type": "code",
+   "execution_count": 21,
    "metadata": {
+    "ExecuteTime": {
+     "end_time": "2026-01-03T08:43:15.490839991Z",
+     "start_time": "2026-01-03T08:43:15.400358664Z"
+    },
     "collapsed": true,
     "executionRelatedData": {
      "compiledClasses": [
@@ -37,28 +44,30 @@
       "Line_16_jupyter",
       "Line_29_jupyter"
      ]
-    },
-    "ExecuteTime": {
-     "end_time": "2026-01-03T08:43:15.490839991Z",
-     "start_time": "2026-01-03T08:43:15.400358664Z"
     }
    },
+   "outputs": [],
    "source": [
     "@file:DependsOn(\"dev.langchain4j:langchain4j:1.6.0\")\n",
     "@file:DependsOn(\"dev.langchain4j:langchain4j-open-ai:1.6.0\")\n",
     "@file:DependsOn(\"dev.langchain4j:langchain4j-http-client-jdk:1.6.0\")"
-   ],
-   "outputs": [],
-   "execution_count": 21
+   ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": "2. Setup networking layer"
+   "source": [
+    "2. Setup networking layer"
+   ]
   },
   {
    "cell_type": "code",
+   "execution_count": 22,
    "metadata": {
+    "ExecuteTime": {
+     "end_time": "2026-01-03T08:43:15.536789830Z",
+     "start_time": "2026-01-03T08:43:15.492643764Z"
+    },
     "executionRelatedData": {
      "compiledClasses": [
       "Line_13_jupyter",
@@ -94,12 +103,9 @@
       "Line_14_jupyter",
       "Line_29_jupyter"
      ]
-    },
-    "ExecuteTime": {
-     "end_time": "2026-01-03T08:43:15.536789830Z",
-     "start_time": "2026-01-03T08:43:15.492643764Z"
     }
    },
+   "outputs": [],
    "source": [
     "import java.time.Duration\n",
     "import java.net.http.HttpClient\n",
@@ -120,17 +126,23 @@
     "    .timeout(durationLimit)\n",
     "    .temperature(0.0)\n",
     "    .returnThinking(false)\n"
-   ],
-   "outputs": [],
-   "execution_count": 22
+   ]
   },
   {
-   "metadata": {},
    "cell_type": "markdown",
-   "source": "3. Setup AI layer"
+   "metadata": {},
+   "source": [
+    "3. Setup AI layer"
+   ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 23,
    "metadata": {
+    "ExecuteTime": {
+     "end_time": "2026-01-03T08:43:15.589228623Z",
+     "start_time": "2026-01-03T08:43:15.538057781Z"
+    },
     "executionRelatedData": {
      "compiledClasses": [
       "Line_13_jupyter",
@@ -158,13 +170,9 @@
       "Line_23_jupyter",
       "Line_25_jupyter"
      ]
-    },
-    "ExecuteTime": {
-     "end_time": "2026-01-03T08:43:15.589228623Z",
-     "start_time": "2026-01-03T08:43:15.538057781Z"
     }
    },
-   "cell_type": "code",
+   "outputs": [],
    "source": [
     "import dev.langchain4j.service.Result\n",
     "\n",
@@ -197,18 +205,23 @@
     "    Task(\"$basePromptPath/system-prompt-diff.md\", \"$basePromptPath/test4-deprecated-material.md\", \"$baseBuildPath/test4-deprecated-material\", \"diff\"),\n",
     "    Task(\"$basePromptPath/system-prompt-diff.md\", \"$basePromptPath/test5-deprecated-plugin.md\", \"$baseBuildPath/test5-deprecated-plugin\", \"diff\"),\n",
     ")"
-   ],
-   "outputs": [],
-   "execution_count": 23
+   ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": "4. Setup resource monitor and utilities"
+   "source": [
+    "4. Setup resource monitor and utilities"
+   ]
   },
   {
    "cell_type": "code",
+   "execution_count": 24,
    "metadata": {
+    "ExecuteTime": {
+     "end_time": "2026-01-03T08:43:15.764173825Z",
+     "start_time": "2026-01-03T08:43:15.589832973Z"
+    },
     "executionRelatedData": {
      "compiledClasses": [
       "Line_27_jupyter",
@@ -238,12 +251,9 @@
       "Line_45_jupyter",
       "Line_14_jupyter"
      ]
-    },
-    "ExecuteTime": {
-     "end_time": "2026-01-03T08:43:15.764173825Z",
-     "start_time": "2026-01-03T08:43:15.589832973Z"
     }
    },
+   "outputs": [],
    "source": [
     "import java.io.File\n",
     "import kotlin.concurrent.thread\n",
@@ -352,18 +362,23 @@
     "}\n",
     "\n",
     "fun String.sanitizeForFilename(): String = replace(\"/\", \"_\")\n"
-   ],
-   "outputs": [],
-   "execution_count": 24
+   ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": "5. Execute and store the results"
+   "source": [
+    "5. Execute and store the results"
+   ]
   },
   {
    "cell_type": "code",
+   "execution_count": 25,
    "metadata": {
+    "ExecuteTime": {
+     "end_time": "2026-01-03T09:35:59.722412163Z",
+     "start_time": "2026-01-03T08:43:15.766029374Z"
+    },
     "executionRelatedData": {
      "compiledClasses": [
       "Line_32_jupyter",
@@ -377,12 +392,46 @@
       "Line_26_jupyter",
       "Line_27_jupyter"
      ]
-    },
-    "ExecuteTime": {
-     "end_time": "2026-01-03T09:35:59.722412163Z",
-     "start_time": "2026-01-03T08:43:15.766029374Z"
     }
    },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Saved to: ../../build/test1-preview/result1-microsoft_phi-4.kt\n",
+      "Saved to: ../../build/test1-preview/result2-openai_gpt-oss-20b.kt\n",
+      "Saved to: ../../build/test1-preview/result3-mistralai_devstral-small-2-2512.kt\n",
+      "Saved to: ../../build/test1-preview/result4-google_gemma-3-27b.kt\n",
+      "Saved to: ../../build/test1-preview/result5-qwen_qwen3-coder-30b.kt\n",
+      "Saved to: ../../build/test1-preview/execution-results.csv\n",
+      "Saved to: ../../build/test2-unit-test/result1-microsoft_phi-4.kt\n",
+      "Saved to: ../../build/test2-unit-test/result2-openai_gpt-oss-20b.kt\n",
+      "Saved to: ../../build/test2-unit-test/result3-mistralai_devstral-small-2-2512.kt\n",
+      "Saved to: ../../build/test2-unit-test/result4-google_gemma-3-27b.kt\n",
+      "Saved to: ../../build/test2-unit-test/result5-qwen_qwen3-coder-30b.kt\n",
+      "Saved to: ../../build/test2-unit-test/execution-results.csv\n",
+      "Saved to: ../../build/test3-instrumentation-test/result1-microsoft_phi-4.kt\n",
+      "Saved to: ../../build/test3-instrumentation-test/result2-openai_gpt-oss-20b.kt\n",
+      "Saved to: ../../build/test3-instrumentation-test/result3-mistralai_devstral-small-2-2512.kt\n",
+      "Saved to: ../../build/test3-instrumentation-test/result4-google_gemma-3-27b.kt\n",
+      "Saved to: ../../build/test3-instrumentation-test/result5-qwen_qwen3-coder-30b.kt\n",
+      "Saved to: ../../build/test3-instrumentation-test/execution-results.csv\n",
+      "Saved to: ../../build/test4-deprecated-material/result1-microsoft_phi-4.diff\n",
+      "Saved to: ../../build/test4-deprecated-material/result2-openai_gpt-oss-20b.diff\n",
+      "Saved to: ../../build/test4-deprecated-material/result3-mistralai_devstral-small-2-2512.diff\n",
+      "Saved to: ../../build/test4-deprecated-material/result4-google_gemma-3-27b.diff\n",
+      "Saved to: ../../build/test4-deprecated-material/result5-qwen_qwen3-coder-30b.diff\n",
+      "Saved to: ../../build/test4-deprecated-material/execution-results.csv\n",
+      "Saved to: ../../build/test5-deprecated-plugin/result1-microsoft_phi-4.diff\n",
+      "Saved to: ../../build/test5-deprecated-plugin/result2-openai_gpt-oss-20b.diff\n",
+      "Saved to: ../../build/test5-deprecated-plugin/result3-mistralai_devstral-small-2-2512.diff\n",
+      "Saved to: ../../build/test5-deprecated-plugin/result4-google_gemma-3-27b.diff\n",
+      "Saved to: ../../build/test5-deprecated-plugin/result5-qwen_qwen3-coder-30b.diff\n",
+      "Saved to: ../../build/test5-deprecated-plugin/execution-results.csv\n"
+     ]
+    }
+   ],
    "source": [
     "import dev.langchain4j.service.AiServices\n",
     "\n",
@@ -452,46 +501,7 @@
     "        transform = ModelExecutionResult::toCsvRow\n",
     "    ).also { it.saveToFile(task.outputDirectory, \"execution-results.csv\") }\n",
     "}"
-   ],
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Saved to: ../../build/test1-preview/result1-microsoft_phi-4.kt\n",
-      "Saved to: ../../build/test1-preview/result2-openai_gpt-oss-20b.kt\n",
-      "Saved to: ../../build/test1-preview/result3-mistralai_devstral-small-2-2512.kt\n",
-      "Saved to: ../../build/test1-preview/result4-google_gemma-3-27b.kt\n",
-      "Saved to: ../../build/test1-preview/result5-qwen_qwen3-coder-30b.kt\n",
-      "Saved to: ../../build/test1-preview/execution-results.csv\n",
-      "Saved to: ../../build/test2-unit-test/result1-microsoft_phi-4.kt\n",
-      "Saved to: ../../build/test2-unit-test/result2-openai_gpt-oss-20b.kt\n",
-      "Saved to: ../../build/test2-unit-test/result3-mistralai_devstral-small-2-2512.kt\n",
-      "Saved to: ../../build/test2-unit-test/result4-google_gemma-3-27b.kt\n",
-      "Saved to: ../../build/test2-unit-test/result5-qwen_qwen3-coder-30b.kt\n",
-      "Saved to: ../../build/test2-unit-test/execution-results.csv\n",
-      "Saved to: ../../build/test3-instrumentation-test/result1-microsoft_phi-4.kt\n",
-      "Saved to: ../../build/test3-instrumentation-test/result2-openai_gpt-oss-20b.kt\n",
-      "Saved to: ../../build/test3-instrumentation-test/result3-mistralai_devstral-small-2-2512.kt\n",
-      "Saved to: ../../build/test3-instrumentation-test/result4-google_gemma-3-27b.kt\n",
-      "Saved to: ../../build/test3-instrumentation-test/result5-qwen_qwen3-coder-30b.kt\n",
-      "Saved to: ../../build/test3-instrumentation-test/execution-results.csv\n",
-      "Saved to: ../../build/test4-deprecated-material/result1-microsoft_phi-4.diff\n",
-      "Saved to: ../../build/test4-deprecated-material/result2-openai_gpt-oss-20b.diff\n",
-      "Saved to: ../../build/test4-deprecated-material/result3-mistralai_devstral-small-2-2512.diff\n",
-      "Saved to: ../../build/test4-deprecated-material/result4-google_gemma-3-27b.diff\n",
-      "Saved to: ../../build/test4-deprecated-material/result5-qwen_qwen3-coder-30b.diff\n",
-      "Saved to: ../../build/test4-deprecated-material/execution-results.csv\n",
-      "Saved to: ../../build/test5-deprecated-plugin/result1-microsoft_phi-4.diff\n",
-      "Saved to: ../../build/test5-deprecated-plugin/result2-openai_gpt-oss-20b.diff\n",
-      "Saved to: ../../build/test5-deprecated-plugin/result3-mistralai_devstral-small-2-2512.diff\n",
-      "Saved to: ../../build/test5-deprecated-plugin/result4-google_gemma-3-27b.diff\n",
-      "Saved to: ../../build/test5-deprecated-plugin/result5-qwen_qwen3-coder-30b.diff\n",
-      "Saved to: ../../build/test5-deprecated-plugin/execution-results.csv\n"
-     ]
-    }
-   ],
-   "execution_count": 25
+   ]
   }
  ],
  "metadata": {
