Test Kotlin & Python kernels

--- a/notebooks/kotlin/test-hardware.ipynb
+++ b/notebooks/kotlin/test-hardware.ipynb
@@ -2,7 +2,13 @@
  "cells": [
   {
    "cell_type": "code",
+   "execution_count": 2,
+   "id": "1ad9a29ae95fe86",
    "metadata": {
+    "ExecuteTime": {
+     "end_time": "2026-01-03T10:03:34.081303372Z",
+     "start_time": "2026-01-03T10:03:32.263904202Z"
+    },
     "collapsed": true,
     "executionRelatedData": {
      "compiledClasses": [
@@ -18,12 +24,61 @@
       "Line_9_jupyter",
       "Line_12_jupyter"
      ]
-    },
-    "ExecuteTime": {
-     "end_time": "2026-01-03T10:03:34.081303372Z",
-     "start_time": "2026-01-03T10:03:32.263904202Z"
     }
    },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "============================================================\n",
+      "Resource Monitor Accuracy Test\n",
+      "============================================================\n",
+      "\n",
+      "📊 RAM Test:\n",
+      "------------------------------------------------------------\n",
+      "Total RAM:              30.42 GB\n",
+      "Available RAM:          20.31 GB\n",
+      "Expected Used RAM:      10.11 GB\n",
+      "Monitor Reports:        10.11 GB\n",
+      "Difference:             0.00 GB\n",
+      "Match: ✅ PASS\n",
+      "\n",
+      "🎮 VRAM Test:\n",
+      "------------------------------------------------------------\n",
+      "\n",
+      "Card: card1\n",
+      "  Total VRAM:           15.92 GB\n",
+      "  Used VRAM (raw):      1676795904 bytes\n",
+      "  Used VRAM:            1.56 GB\n",
+      "  Utilization:          9.8%\n",
+      "\n",
+      "Card: card0\n",
+      "  Total VRAM:           0.50 GB\n",
+      "  Used VRAM (raw):      16777216 bytes\n",
+      "  Used VRAM:            0.02 GB\n",
+      "  Utilization:          3.1%\n",
+      "\n",
+      "Monitor Reports:        1.56 GB\n",
+      "Match: ✅ PASS\n",
+      "\n",
+      "⏱️  Peak Monitoring Test:\n",
+      "------------------------------------------------------------\n",
+      "Duration:               0s\n",
+      "Start RAM:              10.12 GB\n",
+      "Peak RAM:               10.13 GB\n",
+      "RAM Delta:              0.02 GB\n",
+      "Start VRAM:             1.56 GB\n",
+      "Peak VRAM:              1.56 GB\n",
+      "VRAM Delta:             0.00 GB\n",
+      "Result:                 Test completed\n",
+      "\n",
+      "============================================================\n",
+      "✅ Test Complete - Compare values with 'free -h' output\n",
+      "============================================================\n"
+     ]
+    }
+   ],
    "source": [
     "import java.io.File\n",
     "import com.sun.management.OperatingSystemMXBean\n",
@@ -226,62 +281,7 @@
     "\n",
     "// Run the test\n",
     "testResourceMonitor()"
-   ],
-   "id": "1ad9a29ae95fe86",
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "============================================================\n",
-      "Resource Monitor Accuracy Test\n",
-      "============================================================\n",
-      "\n",
-      "📊 RAM Test:\n",
-      "------------------------------------------------------------\n",
-      "Total RAM:              30.42 GB\n",
-      "Available RAM:          18.97 GB\n",
-      "Expected Used RAM:      11.46 GB\n",
-      "Monitor Reports:        11.46 GB\n",
-      "Difference:             0.00 GB\n",
-      "Match: ✅ PASS\n",
-      "\n",
-      "🎮 VRAM Test:\n",
-      "------------------------------------------------------------\n",
-      "\n",
-      "Card: card1\n",
-      "  Total VRAM:           15.92 GB\n",
-      "  Used VRAM (raw):      1687896064 bytes\n",
-      "  Used VRAM:            1.57 GB\n",
-      "  Utilization:          9.9%\n",
-      "\n",
-      "Card: card0\n",
-      "  Total VRAM:           0.50 GB\n",
-      "  Used VRAM (raw):      16764928 bytes\n",
-      "  Used VRAM:            0.02 GB\n",
-      "  Utilization:          3.1%\n",
-      "\n",
-      "Monitor Reports:        1.57 GB\n",
-      "Match: ✅ PASS\n",
-      "\n",
-      "⏱️  Peak Monitoring Test:\n",
-      "------------------------------------------------------------\n",
-      "Duration:               0s\n",
-      "Start RAM:              11.46 GB\n",
-      "Peak RAM:               11.59 GB\n",
-      "RAM Delta:              0.13 GB\n",
-      "Start VRAM:             1.57 GB\n",
-      "Peak VRAM:              1.59 GB\n",
-      "VRAM Delta:             0.02 GB\n",
-      "Result:                 Test completed\n",
-      "\n",
-      "============================================================\n",
-      "✅ Test Complete - Compare values with 'free -h' output\n",
-      "============================================================\n"
-     ]
-    }
-   ],
-   "execution_count": 1
+   ]
   }
  ],
  "metadata": {
@@ -291,13 +291,13 @@
    "name": "kotlin"
   },
   "language_info": {
-   "name": "kotlin",
-   "version": "2.2.20",
-   "mimetype": "text/x-kotlin",
-   "file_extension": ".kt",
-   "pygments_lexer": "kotlin",
    "codemirror_mode": "text/x-kotlin",
-   "nbconvert_exporter": ""
+   "file_extension": ".kt",
+   "mimetype": "text/x-kotlin",
+   "name": "kotlin",
+   "nbconvert_exporter": "",
+   "pygments_lexer": "kotlin",
+   "version": "2.2.20-Beta2"
   }
  },
  "nbformat": 4,
