--- a/notebooks/kotlin/test-setup.ipynb
+++ b/notebooks/kotlin/test-setup.ipynb
@@ -9,7 +9,12 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 16,
    "metadata": {
+    "ExecuteTime": {
+     "end_time": "2026-01-03T10:03:47.517369855Z",
+     "start_time": "2026-01-03T10:03:47.196795083Z"
+    },
     "collapsed": true,
     "executionRelatedData": {
      "compiledClasses": [
@@ -24,19 +29,14 @@
       "Line_29_jupyter",
       "Line_43_jupyter"
      ]
-    },
-    "ExecuteTime": {
-     "end_time": "2026-01-03T10:03:47.517369855Z",
-     "start_time": "2026-01-03T10:03:47.196795083Z"
     }
    },
+   "outputs": [],
    "source": [
     "@file:DependsOn(\"dev.langchain4j:langchain4j:1.6.0\")\n",
     "@file:DependsOn(\"dev.langchain4j:langchain4j-open-ai:1.6.0\")\n",
     "@file:DependsOn(\"dev.langchain4j:langchain4j-http-client-jdk:1.6.0\")"
-   ],
-   "outputs": [],
-   "execution_count": 1
+   ]
   },
   {
    "cell_type": "markdown",
@@ -47,7 +47,12 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 17,
    "metadata": {
+    "ExecuteTime": {
+     "end_time": "2026-01-03T10:03:58.640406389Z",
+     "start_time": "2026-01-03T10:03:47.518312548Z"
+    },
     "executionRelatedData": {
      "compiledClasses": [
       "Line_44_jupyter",
@@ -62,12 +67,17 @@
       "Line_26_jupyter",
       "Line_40_jupyter"
      ]
-    },
-    "ExecuteTime": {
-     "end_time": "2026-01-03T10:03:58.640406389Z",
-     "start_time": "2026-01-03T10:03:47.518312548Z"
     }
    },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The capital city of Japan is **Tokyo**.\n"
+     ]
+    }
+   ],
    "source": [
     "import dev.langchain4j.http.client.jdk.JdkHttpClient\n",
     "import dev.langchain4j.model.openai.OpenAiChatModel\n",
@@ -95,25 +105,23 @@
     "\n",
     "val answer = openAiModel.chat(\"What is the capital city of Japan?\")\n",
     "println(answer)\n"
-   ],
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "The capital city of Japan is **Tokyo**.\n"
-     ]
-    }
-   ],
-   "execution_count": 2
+   ]
   },
   {
-   "metadata": {},
    "cell_type": "markdown",
-   "source": "Service Test"
+   "metadata": {},
+   "source": [
+    "Service Test"
+   ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {
+    "ExecuteTime": {
+     "end_time": "2026-01-03T10:03:58.822572279Z",
+     "start_time": "2026-01-03T10:03:58.641146373Z"
+    },
     "executionRelatedData": {
      "compiledClasses": [
       "Line_13_jupyter",
@@ -134,16 +142,29 @@
       "Line_23_jupyter",
       "Line_45_jupyter"
      ]
-    },
-    "ExecuteTime": {
-     "end_time": "2026-01-03T10:03:58.822572279Z",
-     "start_time": "2026-01-03T10:03:58.641146373Z"
     }
    },
-   "cell_type": "code",
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "```kotlin\n",
+      "fun main() {\n",
+      "    println(\"Hello, world!\")\n",
+      "}\n",
+      "```\n",
+      "\n",
+      "In Kotlin you typically put the `println` call inside a `main` function (or any other function). The syntax is almost identical to Java’s `System.out.println`, but without the `System.out.` prefix.\n",
+      "****************************************************************************************************\n",
+      "Selamat pagi!\n"
+     ]
+    }
+   ],
    "source": [
     "import dev.langchain4j.service.AiServices\n",
     "import dev.langchain4j.service.Result\n",
+    "import dev.langchain4j.model.chat.ChatModel\n",
     "\n",
     "interface CodeGenAiService {\n",
     "    fun generateCode(prompt: String): Result<String>\n",
@@ -153,85 +174,30 @@
     "    fun translate(message: String): Result<String>\n",
     "}\n",
     "\n",
-    "val noThink =\n",
-    "\"\"\"\n",
-    "    /no_think\n",
-    "    thinking_enabled: false\n",
-    "    detailed thinking off\n",
-    "\"\"\"\n",
-    ".trimIndent()\n",
-    "\n",
     "fun executeCodeGen(model: ChatModel) {\n",
     "    val codeGenService = AiServices.builder(CodeGenAiService::class.java)\n",
-    "        .systemMessageProvider { \"convert this to Kotlin\" + noThink }\n",
+    "        .systemMessageProvider { \"convert this to Kotlin\" }\n",
     "        .chatModel(model)\n",
     "        .build()\n",
     "\n",
     "    val result = codeGenService.generateCode(\"System.out.println(\\\"Hello, world!\\\"\")\n",
     "    println(result.content())\n",
-    "    println(\"\\n\")\n",
-    "    println(\"*\".repeat(100))\n",
-    "    println(\"\\n\")\n",
     "}\n",
     "\n",
     "fun executeTranslation(model: ChatModel) {\n",
     "    val translatorAiService = AiServices.builder(TranslatorAiService::class.java)\n",
-    "        .systemMessageProvider { \"translate this to Bahasa Indonesia.\" + noThink }\n",
+    "        .systemMessageProvider { \"translate this to Bahasa Indonesia.\" }\n",
     "        .chatModel(model)\n",
     "        .build()\n",
     "\n",
     "    val result = translatorAiService.translate(\"Good morning\")\n",
     "    println(result.finalResponse().aiMessage().text())\n",
-    "\n",
-    "    println(\"\\n\")\n",
-    "    println(\"*\".repeat(100))\n",
-    "    println(\"\\n\")\n",
     "}\n",
     "\n",
     "executeCodeGen(openAiModel)\n",
+    "println(\"\\n*\".repeat(100))\n",
     "executeTranslation(openAiModel)"
-   ],
-   "outputs": [
-    {
-     "ename": "org.jetbrains.kotlinx.jupyter.exceptions.ReplCompilerException",
-     "evalue": "at Cell In[3], line 20, column 27: Unresolved reference: ChatModel\nat Cell In[3], line 33, column 31: Unresolved reference: ChatModel",
-     "output_type": "error",
-     "traceback": [
-      "org.jetbrains.kotlinx.jupyter.exceptions.ReplCompilerException: at Cell In[3], line 20, column 27: Unresolved reference: ChatModel",
-      "at Cell In[3], line 33, column 31: Unresolved reference: ChatModel",
-      "\tat org.jetbrains.kotlinx.jupyter.repl.impl.JupyterCompilerImpl.compileSync(JupyterCompilerImpl.kt:151)",
-      "\tat org.jetbrains.kotlinx.jupyter.repl.impl.InternalEvaluatorImpl.eval(InternalEvaluatorImpl.kt:126)",
-      "\tat org.jetbrains.kotlinx.jupyter.repl.impl.CellExecutorImpl.execute_W38Nk0s$lambda$0$1(CellExecutorImpl.kt:95)",
-      "\tat org.jetbrains.kotlinx.jupyter.repl.impl.ReplForJupyterImpl.withHost(ReplForJupyterImpl.kt:730)",
-      "\tat org.jetbrains.kotlinx.jupyter.repl.impl.CellExecutorImpl.execute-W38Nk0s(CellExecutorImpl.kt:93)",
-      "\tat org.jetbrains.kotlinx.jupyter.repl.execution.CellExecutor.execute-W38Nk0s$default(CellExecutor.kt:14)",
-      "\tat org.jetbrains.kotlinx.jupyter.repl.impl.ReplForJupyterImpl.evaluateUserCode-wNURfNM(ReplForJupyterImpl.kt:591)",
-      "\tat org.jetbrains.kotlinx.jupyter.repl.impl.ReplForJupyterImpl.evalExImpl(ReplForJupyterImpl.kt:472)",
-      "\tat org.jetbrains.kotlinx.jupyter.repl.impl.ReplForJupyterImpl.evalEx$lambda$0(ReplForJupyterImpl.kt:466)",
-      "\tat org.jetbrains.kotlinx.jupyter.repl.impl.ReplForJupyterImpl.withEvalContext(ReplForJupyterImpl.kt:448)",
-      "\tat org.jetbrains.kotlinx.jupyter.repl.impl.ReplForJupyterImpl.evalEx(ReplForJupyterImpl.kt:465)",
-      "\tat org.jetbrains.kotlinx.jupyter.messaging.IdeCompatibleMessageRequestProcessor.processExecuteRequest$lambda$0$0$0(IdeCompatibleMessageRequestProcessor.kt:161)",
-      "\tat org.jetbrains.kotlinx.jupyter.streams.BlockingSubstitutionEngine.withDataSubstitution(SubstitutionEngine.kt:124)",
-      "\tat org.jetbrains.kotlinx.jupyter.streams.StreamSubstitutionManager.withSubstitutedStreams(StreamSubstitutionManager.kt:118)",
-      "\tat org.jetbrains.kotlinx.jupyter.messaging.IdeCompatibleMessageRequestProcessor.withForkedIn(IdeCompatibleMessageRequestProcessor.kt:351)",
-      "\tat org.jetbrains.kotlinx.jupyter.messaging.IdeCompatibleMessageRequestProcessor.evalWithIO$lambda$0$0(IdeCompatibleMessageRequestProcessor.kt:364)",
-      "\tat org.jetbrains.kotlinx.jupyter.streams.BlockingSubstitutionEngine.withDataSubstitution(SubstitutionEngine.kt:124)",
-      "\tat org.jetbrains.kotlinx.jupyter.streams.StreamSubstitutionManager.withSubstitutedStreams(StreamSubstitutionManager.kt:118)",
-      "\tat org.jetbrains.kotlinx.jupyter.messaging.IdeCompatibleMessageRequestProcessor.withForkedErr(IdeCompatibleMessageRequestProcessor.kt:341)",
-      "\tat org.jetbrains.kotlinx.jupyter.messaging.IdeCompatibleMessageRequestProcessor.evalWithIO$lambda$0(IdeCompatibleMessageRequestProcessor.kt:363)",
-      "\tat org.jetbrains.kotlinx.jupyter.streams.BlockingSubstitutionEngine.withDataSubstitution(SubstitutionEngine.kt:124)",
-      "\tat org.jetbrains.kotlinx.jupyter.streams.StreamSubstitutionManager.withSubstitutedStreams(StreamSubstitutionManager.kt:118)",
-      "\tat org.jetbrains.kotlinx.jupyter.messaging.IdeCompatibleMessageRequestProcessor.withForkedOut(IdeCompatibleMessageRequestProcessor.kt:334)",
-      "\tat org.jetbrains.kotlinx.jupyter.messaging.IdeCompatibleMessageRequestProcessor.evalWithIO(IdeCompatibleMessageRequestProcessor.kt:362)",
-      "\tat org.jetbrains.kotlinx.jupyter.messaging.IdeCompatibleMessageRequestProcessor.processExecuteRequest$lambda$0$0(IdeCompatibleMessageRequestProcessor.kt:160)",
-      "\tat org.jetbrains.kotlinx.jupyter.execution.JupyterExecutorImpl$Task.execute(JupyterExecutorImpl.kt:41)",
-      "\tat org.jetbrains.kotlinx.jupyter.execution.JupyterExecutorImpl.executorThread$lambda$0(JupyterExecutorImpl.kt:81)",
-      "\tat kotlin.concurrent.ThreadsKt$thread$thread$1.run(Thread.kt:30)",
-      ""
-     ]
-    }
-   ],
-   "execution_count": 3
+   ]
   }
  ],
  "metadata": {
