--- a/notebooks/python/test-parsing-kt.ipynb
+++ b/notebooks/python/test-parsing-kt.ipynb
@@ -10,14 +10,16 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 5,
    "id": "26e1b200132bd07e",
    "metadata": {
-    "collapsed": true,
     "ExecuteTime": {
      "end_time": "2026-01-03T10:06:13.984969651Z",
      "start_time": "2026-01-03T10:06:13.969961712Z"
-    }
+    },
+    "collapsed": true
    },
+   "outputs": [],
    "source": [
     "from tree_sitter import Language, Parser\n",
     "from pathlib import Path\n",
@@ -27,9 +29,7 @@
     "\n",
     "parser = Parser()\n",
     "parser.set_language(KOTLIN_LANGUAGE)"
-   ],
-   "outputs": [],
-   "execution_count": 5
+   ]
   },
   {
    "cell_type": "markdown",
@@ -41,6 +41,7 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 6,
    "id": "5f3947712a616c81",
    "metadata": {
     "ExecuteTime": {
@@ -48,6 +49,42 @@
      "start_time": "2026-01-03T10:06:13.985898458Z"
     }
    },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Function: InterestsCardPreview\n",
+      "  Annotations (on function):\n",
+      "    @Preview\n",
+      "    @Composable\n",
+      "\n",
+      "Function: InterestsCardLongNamePreview\n",
+      "  Annotations (on function):\n",
+      "    @Preview\n",
+      "    @Composable\n",
+      "\n",
+      "Function: InterestsCardLongDescriptionPreview\n",
+      "  Annotations (on function):\n",
+      "    @Preview\n",
+      "    @Composable\n",
+      "\n",
+      "Function: InterestsCardWithEmptyDescriptionPreview\n",
+      "  Annotations (on function):\n",
+      "    @Preview\n",
+      "    @Composable\n",
+      "\n",
+      "Function: InterestsCardSelectedPreview\n",
+      "  Annotations (on function):\n",
+      "    @Composable\n",
+      "    @Preview\n",
+      "\n",
+      "Valid Kotlin: True\n",
+      "Total functions found: 5\n",
+      "Total functions with @Preview and @Composable: 5\n"
+     ]
+    }
+   ],
    "source": [
     "kt_1 = Path(\"../../resources/golden-reference/original/test1-preview.kt\").read_bytes()\n",
     "tree = parser.parse(kt_1)\n",
@@ -124,44 +161,7 @@
     "print(f\"Valid Kotlin: {is_valid_kotlin}\")\n",
     "print(f\"Total functions found: {len(all_functions)}\")\n",
     "print(f\"Total functions with @Preview and @Composable: {total_preview_composable_functions}\")"
-   ],
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Function: InterestsCardPreview\n",
-      "  Annotations (on function):\n",
-      "    @Preview\n",
-      "    @Composable\n",
-      "\n",
-      "Function: InterestsCardLongNamePreview\n",
-      "  Annotations (on function):\n",
-      "    @Preview\n",
-      "    @Composable\n",
-      "\n",
-      "Function: InterestsCardLongDescriptionPreview\n",
-      "  Annotations (on function):\n",
-      "    @Preview\n",
-      "    @Composable\n",
-      "\n",
-      "Function: InterestsCardWithEmptyDescriptionPreview\n",
-      "  Annotations (on function):\n",
-      "    @Preview\n",
-      "    @Composable\n",
-      "\n",
-      "Function: InterestsCardSelectedPreview\n",
-      "  Annotations (on function):\n",
-      "    @Composable\n",
-      "    @Preview\n",
-      "\n",
-      "Valid Kotlin: True\n",
-      "Total functions found: 5\n",
-      "Total functions with @Preview and @Composable: 5\n"
-     ]
-    }
-   ],
-   "execution_count": 6
+   ]
   },
   {
    "cell_type": "markdown",
@@ -173,6 +173,7 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 7,
    "id": "1a0bd206e2fb9921",
    "metadata": {
     "ExecuteTime": {
@@ -180,6 +181,20 @@
      "start_time": "2026-01-03T10:06:14.060821905Z"
     }
    },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "--- Analysis ---\n",
+      "Valid Kotlin: True\n",
+      "Has All Required Imports: True\n",
+      "Has GetFollowableTopicsUseCase Constructor: True\n",
+      "Functions with @Test annotation: 2\n",
+      "Has Exactly 2 Test Functions: True\n"
+     ]
+    }
+   ],
    "source": [
     "kt_2 = Path(\"../../resources/golden-reference/original/test2-unit-test.kt\").read_bytes()\n",
     "tree = parser.parse(kt_2)\n",
@@ -270,22 +285,7 @@
     "print(f\"Has GetFollowableTopicsUseCase Constructor: {has_use_case_constructor}\")\n",
     "print(f\"Functions with @Test annotation: {test_functions_count}\")\n",
     "print(f\"Has Exactly 2 Test Functions: {has_exactly_three_test_functions}\")"
-   ],
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "--- Analysis ---\n",
-      "Valid Kotlin: True\n",
-      "Has All Required Imports: True\n",
-      "Has GetFollowableTopicsUseCase Constructor: True\n",
-      "Functions with @Test annotation: 2\n",
-      "Has Exactly 2 Test Functions: True\n"
-     ]
-    }
-   ],
-   "execution_count": 7
+   ]
   },
   {
    "cell_type": "markdown",
@@ -297,6 +297,7 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 8,
    "id": "82603b1ae0afe301",
    "metadata": {
     "ExecuteTime": {
@@ -304,6 +305,23 @@
      "start_time": "2026-01-03T10:06:14.134224869Z"
     }
    },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "--- Analysis ---\n",
+      "Imports TopicEntity: True\n",
+      "Inherits from DatabaseTest: True\n",
+      "Functions with @Test: 7\n",
+      "\n",
+      "--- Details ---\n",
+      "Imports: ['com.google.samples.apps.nowinandroid.core.database.model.TopicEntity', 'kotlinx.coroutines.flow.first', 'kotlinx.coroutines.test.runTest', 'org.junit.Test', 'kotlin.test.assertEquals']\n",
+      "Classes: [{'name': 'TopicDaoTest', 'parents': ['DatabaseTest']}]\n",
+      "Test functions: ['getTopics', 'getTopic', 'getTopics_oneOff', 'getTopics_byId', 'insertTopic_newEntryIsIgnoredIfAlreadyExists', 'upsertTopic_existingEntryIsUpdated', 'deleteTopics_byId_existingEntriesAreDeleted']\n"
+     ]
+    }
+   ],
    "source": [
     "kt_3 = Path(\"../../resources/golden-reference/original/test3-instrumentation-test.kt\").read_bytes()\n",
     "tree = parser.parse(kt_3)\n",
@@ -394,44 +412,26 @@
     "print(f\"Imports: {results['imports']}\")\n",
     "print(f\"Classes: {results['classes']}\")\n",
     "print(f\"Test functions: {test_functions}\")"
-   ],
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "--- Analysis ---\n",
-      "Imports TopicEntity: True\n",
-      "Inherits from DatabaseTest: True\n",
-      "Functions with @Test: 7\n",
-      "\n",
-      "--- Details ---\n",
-      "Imports: ['com.google.samples.apps.nowinandroid.core.database.model.TopicEntity', 'kotlinx.coroutines.flow.first', 'kotlinx.coroutines.test.runTest', 'org.junit.Test', 'kotlin.test.assertEquals']\n",
-      "Classes: [{'name': 'TopicDaoTest', 'parents': ['DatabaseTest']}]\n",
-      "Test functions: ['getTopics', 'getTopic', 'getTopics_oneOff', 'getTopics_byId', 'insertTopic_newEntryIsIgnoredIfAlreadyExists', 'upsertTopic_existingEntryIsUpdated', 'deleteTopics_byId_existingEntriesAreDeleted']\n"
-     ]
-    }
-   ],
-   "execution_count": 8
+   ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": ".venv",
    "language": "python",
    "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
     "name": "ipython",
-    "version": 2
+    "version": 3
    },
    "file_extension": ".py",
    "mimetype": "text/x-python",
    "name": "python",
    "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython2",
-   "version": "2.7.6"
+   "pygments_lexer": "ipython3",
+   "version": "3.14.2"
   }
  },
  "nbformat": 4,
