--- a/notebooks/python/test-parsing-diff.ipynb
+++ b/notebooks/python/test-parsing-diff.ipynb
@@ -1,19 +1,33 @@
 {
  "cells": [
   {
-   "metadata": {},
    "cell_type": "markdown",
-   "source": "Initialize parser",
-   "id": "53b919eeb97e19fb"
+   "id": "53b919eeb97e19fb",
+   "metadata": {},
+   "source": [
+    "Initialize parser"
+   ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 1,
+   "id": "becde4d357d08b59",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2026-01-03T10:06:16.904277494Z",
      "start_time": "2026-01-03T10:06:16.884674611Z"
     }
    },
-   "cell_type": "code",
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/var/home/bazzite/github/aldoKelvianto/evaluating-local-model-for-android/.venv/lib/python3.14/site-packages/tree_sitter/__init__.py:36: FutureWarning: Language(path, name) is deprecated. Use Language(ptr, name) instead.\n",
+      "  warn(\"{} is deprecated. Use {} instead.\".format(old, new), FutureWarning)\n"
+     ]
+    }
+   ],
    "source": [
     "from tree_sitter import Language, Parser\n",
     "from pathlib import Path\n",
@@ -31,27 +45,46 @@
     "\n",
     "deletions = []\n",
     "additions = []"
-   ],
-   "id": "becde4d357d08b59",
-   "outputs": [],
-   "execution_count": 4
+   ]
   },
   {
-   "metadata": {},
    "cell_type": "markdown",
-   "source": "Parsing Diff #1 - Material",
-   "id": "74d3beab1d4e396c"
+   "id": "74d3beab1d4e396c",
+   "metadata": {},
+   "source": [
+    "Parsing Diff #1 - Material"
+   ]
   },
   {
    "cell_type": "code",
+   "execution_count": 2,
    "id": "initial_id",
    "metadata": {
-    "collapsed": true,
     "ExecuteTime": {
      "end_time": "2026-01-03T10:06:16.959705479Z",
      "start_time": "2026-01-03T10:06:16.906307992Z"
-    }
+    },
+    "collapsed": true
    },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Deletions:\n",
+      "colors: TopAppBarColors = TopAppBarDefaults.centerAlignedTopAppBarColors(),\n",
+      "colors = TopAppBarDefaults.centerAlignedTopAppBarColors(\n",
+      "\n",
+      "Additions:\n",
+      "colors: TopAppBarColors = TopAppBarDefaults.topAppBarColors(),\n",
+      "colors = TopAppBarDefaults.topAppBarColors(\n",
+      "has error: False\n",
+      "s-exp: (source (old_file (filename)) (new_file (filename)) (location (linerange) (linerange)) (context) (context) (context) (deletion) (addition) (context) (context) (context) (old_file (filename)) (new_file (filename)) (location (linerange) (linerange)) (context) (context) (context) (deletion) (addition) (context) (context) (context))\n",
+      "contains_all_deletions: True\n",
+      "contains_all_additions: True\n"
+     ]
+    }
+   ],
    "source": [
     "diff_1 = Path(\"../../resources/golden-reference/claude-sonnet-4_5/test4-deprecated-material.diff\").read_text()\n",
     "\n",
@@ -104,42 +137,47 @@
     "\n",
     "deletions.clear()\n",
     "additions.clear()"
-   ],
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Deletions:\n",
-      "colors: TopAppBarColors = TopAppBarDefaults.centerAlignedTopAppBarColors(),\n",
-      "colors = TopAppBarDefaults.centerAlignedTopAppBarColors(\n",
-      "\n",
-      "Additions:\n",
-      "colors: TopAppBarColors = TopAppBarDefaults.topAppBarColors(),\n",
-      "colors = TopAppBarDefaults.topAppBarColors(\n",
-      "has error: False\n",
-      "s-exp: (source (old_file (filename)) (new_file (filename)) (location (linerange) (linerange)) (context) (context) (context) (deletion) (addition) (context) (context) (context) (old_file (filename)) (new_file (filename)) (location (linerange) (linerange)) (context) (context) (context) (deletion) (addition) (context) (context) (context))\n",
-      "contains_all_deletions: True\n",
-      "contains_all_additions: True\n"
-     ]
-    }
-   ],
-   "execution_count": 5
+   ]
   },
   {
-   "metadata": {},
    "cell_type": "markdown",
-   "source": "Parsing Diff #2 - Plugin",
-   "id": "ec2952bfd07b3aec"
+   "id": "ec2952bfd07b3aec",
+   "metadata": {},
+   "source": [
+    "Parsing Diff #2 - Plugin"
+   ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "1a0bd206e2fb9921",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2026-01-03T10:06:17.020844636Z",
      "start_time": "2026-01-03T10:06:16.961100408Z"
     }
    },
-   "cell_type": "code",
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Deletions:\n",
+      "import org.jetbrains.kotlin.gradle.dsl.KotlinJvmProjectExtension\n",
+      "import org.jetbrains.kotlin.gradle.dsl.KotlinTopLevelExtension\n",
+      "private inline fun <reified T : KotlinTopLevelExtension> Project.configureKotlin() = configure<T> {\n",
+      "\n",
+      "Additions:\n",
+      "import org.jetbrains.kotlin.gradle.dsl.KotlinBaseExtension\n",
+      "import org.jetbrains.kotlin.gradle.dsl.KotlinJvmProjectExtension\n",
+      "private inline fun <reified T : KotlinBaseExtension> Project.configureKotlin() = configure<T> {\n",
+      "has error: False\n",
+      "s-exp: (source (old_file (filename)) (new_file (filename)) (location (linerange) (linerange)) (context) (context) (context) (deletion) (deletion) (addition) (addition) (context) (location (linerange) (linerange)) (context) (context) (context) (deletion) (addition) (context) (context) (context))\n",
+      "contains_all_deletions: True\n",
+      "contains_all_additions: True\n"
+     ]
+    }
+   ],
    "source": [
     "diff_2 = Path(\"../../resources/golden-reference/claude-sonnet-4_5/test5-deprecated-plugin.diff\").read_text()\n",
     "\n",
@@ -190,49 +228,26 @@
     "\n",
     "print(\"contains_all_deletions:\", contains_all_deletions)\n",
     "print(\"contains_all_additions:\", contains_all_additions)"
-   ],
-   "id": "1a0bd206e2fb9921",
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Deletions:\n",
-      "import org.jetbrains.kotlin.gradle.dsl.KotlinJvmProjectExtension\n",
-      "import org.jetbrains.kotlin.gradle.dsl.KotlinTopLevelExtension\n",
-      "private inline fun <reified T : KotlinTopLevelExtension> Project.configureKotlin() = configure<T> {\n",
-      "\n",
-      "Additions:\n",
-      "import org.jetbrains.kotlin.gradle.dsl.KotlinBaseExtension\n",
-      "import org.jetbrains.kotlin.gradle.dsl.KotlinJvmProjectExtension\n",
-      "private inline fun <reified T : KotlinBaseExtension> Project.configureKotlin() = configure<T> {\n",
-      "has error: False\n",
-      "s-exp: (source (old_file (filename)) (new_file (filename)) (location (linerange) (linerange)) (context) (context) (context) (deletion) (deletion) (addition) (addition) (context) (location (linerange) (linerange)) (context) (context) (context) (deletion) (addition) (context) (context) (context))\n",
-      "contains_all_deletions: True\n",
-      "contains_all_additions: True\n"
-     ]
-    }
-   ],
-   "execution_count": 6
+   ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": ".venv",
    "language": "python",
    "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
     "name": "ipython",
-    "version": 2
+    "version": 3
    },
    "file_extension": ".py",
    "mimetype": "text/x-python",
    "name": "python",
    "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython2",
-   "version": "2.7.6"
+   "pygments_lexer": "ipython3",
+   "version": "3.14.2"
   }
  },
  "nbformat": 4,
