Test Kotlin & Python kernels

--- a/notebooks/kotlin/test-setup.ipynb
+++ b/notebooks/kotlin/test-setup.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 28,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2026-01-03T10:03:47.517369855Z",
@@ -47,7 +47,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 29,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2026-01-03T10:03:58.640406389Z",
@@ -116,7 +116,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 30,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2026-01-03T10:03:58.822572279Z",
@@ -156,7 +156,9 @@
       "```\n",
       "\n",
       "In Kotlin you typically put the `println` call inside a `main` function (or any other function). The syntax is almost identical to Java’s `System.out.println`, but without the `System.out.` prefix.\n",
-      "****************************************************************************************************\n",
+      "\n",
+      "******************************************************************************************************************************************************\n",
+      "\n",
       "Selamat pagi!\n"
      ]
     }
@@ -195,7 +197,7 @@
     "}\n",
     "\n",
     "executeCodeGen(openAiModel)\n",
-    "println(\"\\n*\".repeat(100))\n",
+    "println(\"\\n\" + \"*\".repeat(150) + \"\\n\")\n",
     "executeTranslation(openAiModel)"
    ]
   }
